--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
