--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
